tests/variables/errors/out_of_scope1.c.res
[36mERROR: Variable not declared[0m [4min line 4
[0m    j = 0;
    ^
[36mERROR: Variable not declared[0m [4min line 12
[0m        j = 0;
        ^
[36mERROR: Variable not declared[0m [4min line 14
[0m    i = 0;
    ^
[36mERROR: Variable not declared[0m [4min line 15
[0m    j = 0;
    ^
[1m[31mCompilation failed with 4 errors
[0m